--- a/page_contacts/index.html
+++ b/page_contacts/index.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Prikhodko</title>
 	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="media.css">
 	<link rel="stylesheet icon" href="https://sun9-34.userapi.com/impg/A9RHpuaFLpKLeJZvvklvodrgym1TCE48IdVObw/LM0QLJQ2_Ok.jpg?size=640x640&quality=96&sign=16eef36cf028a7121d8f1b5522fedba9&type=album">
 </head>
 <body>
@@ -19,12 +20,26 @@
 		<h1 class="language">EN</h1>
 	</header>
 
+	<!--adaptation menu-->
+	<div class="menuAdap">
+		<div class="strip"></div>
+		<div class="strip"></div>
+		<div class="strip"></div>
+	</div>
+
+	<div class="cross">✖</div> 
+
+	<!-- title one -->
 	<div class="containerVk"><span class="writeVk">write to the </span><span class="vk">VK</span></div>
-
-	<img src="img/gifGB.gif" class="gifGB"></img>
-
+	<!-- sad gif -->
+	<img src="img/gifGB.gif" class="gifGB" alt="girl from anime 'Golden Boy' "></img>
+	<!-- title two-->
 	<div class="containerMail"><span class="writeMail">or to the </span><span class="mail">mail</span></div>
 
+	<!-- gsap to reduce styles -->
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.0/gsap.min.js"></script>
+
 	<script src="script.js"></script>
+	<script src="media.js"></script>
 </body>
 </html>
