--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Canvas Portfolio</title>
 	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="media.css">
 	<link rel="stylesheet icon" href="https://sun9-50.userapi.com/impg/krxX1zOq8Z1soTGBDkwPteywAz64mwlq6BLUJQ/FXnaIyxZDcM.jpg?size=1004x847&quality=96&sign=fd6ecd12daf448b5700c92f075b93704&type=album">
 </head>
 <body>
@@ -34,7 +35,7 @@
 	<!--sliders about skills-->
 	<h1 class="mySkills">My skills</h1>
 
-	<div class="slidersAndPic">
+	<div class="sliders">
 		<div class="fieldSlider">
 			<span class="firstValueSlider">0%</span>
 			<span class="lastValueSlider">100%</span>
@@ -110,5 +111,6 @@
 	<script src="https://cdn.rawgit.com/mrdoob/three.js/master/examples/js/loaders/GLTFLoader.js"></script> 
 
 	<script src="script.js"></script>
+	<script src="media.js"></script>
 </body>
 </html>
