--- a/page_my_works/index.html
+++ b/page_my_works/index.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Prikhodko</title>
 	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="media.css">
 	<link rel="stylesheet icon" href="https://sun9-34.userapi.com/impg/A9RHpuaFLpKLeJZvvklvodrgym1TCE48IdVObw/LM0QLJQ2_Ok.jpg?size=640x640&quality=96&sign=16eef36cf028a7121d8f1b5522fedba9&type=album">
 </head>
 <body>
@@ -28,9 +29,9 @@
 		<img src="img/pic.png" alt="" class="pic" onclick="window.open('https://izura1419.github.io/Pic/','_blank')">
 		<img src="img/mathilda.png" alt="" class="mathilda" onclick="window.open('https://izura1419.github.io/flight-of-design-thought/','_blank')">
 	</div>
-
+	<!--nice gif-->
 	<img src="img/niceJF.gif" alt="" class="underDivMan">
-
+	<!-- examples of works -->
 	<h1 class="someProjects">Here are some projects from my portfolio</h1>
 
 	<section>
@@ -73,5 +74,6 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.0/ScrollTrigger.min.js"></script>
 
 	<script src="script.js"></script>
+	<script src="media.js"></script>
 </body>
 </html>
