--- a/page_my_works/index.html
+++ b/page_my_works/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Prikhodko</title>
 	<link rel="stylesheet" href="style.css">
@@ -19,6 +19,16 @@
 
 		<h1 class="language">EN</h1>
 	</header>
+
+	<!--adaptation menu-->
+	<div class="menuAdap">
+		<div class="strip"></div>
+		<div class="strip"></div>
+		<div class="strip"></div>
+	</div>
+
+	<div class="cross">✖</div> 
+
 	<!--pic with parallax from anime "Your Name"-->
 	<div class="yourName"></div>
 	<!--heading about where can find my works-->
@@ -48,7 +58,7 @@
 
 	<section>
 		<h1 class="title" onclick="window.open('https://izura1419.github.io/flight-of-design-thought/','_blank')">Mathilda Lando</h1>
-		<h3 class="description">After watching the movie Leon (1994), I was inspired and created an unusual website based on design.</h3>
+		<h3 class="description">After watching the movie Leon: The Professional(1994), I was inspired and created an unusual website based on design.</h3>
 		<img src="img/mathilda.png" alt="" class="illustration">
 	</section>
 
@@ -69,7 +79,7 @@
 		<div class="arrow"></div>
 	</div>
 
-	<!-- gsap for scroll -->
+	<!-- gsap for scroll and reduce styles-->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.0/gsap.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.0/ScrollTrigger.min.js"></script>
 
