--- a/page_my_works/index.html
+++ b/page_my_works/index.html
@@ -45,7 +45,7 @@
 	<h1 class="someProjects">Here are some projects from my portfolio</h1>
 
 	<section>
-		<h1 class="title" onclick="window.open('https://izura1419.github.io/my-vaporwave/','_blank')">Vaporwave</h1>
+		<h1 class="title firstTitle" onclick="window.open('https://izura1419.github.io/my-vaporwave/','_blank')">Vaporwave</h1>
 		<h3 class="description">While studying the Javascript library Three.js, I was listening to the song リフフランンク420 /ののコンピュー MACINTOSH PLUS and was inspired by the culture of V a p o r w a v e. Here's what came out of it.</h3>
 		<img src="img/vapor.png" alt="" class="illustration">
 	</section>
