--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Canvas Portfolio</title>
 	<link rel="stylesheet" href="style.css">
@@ -23,7 +23,7 @@
 	<canvas class="circlesAndName"></canvas>
 	<!--description of me-->
 	<div class="aboutMe">
-		<span class="descriptionOfMe">I'm Vladislav Prikhodko, a <span class="myAge">15</span>-y.o. frontend developer from Russia</span>
+		<span class="descriptionOfMe">I'm Vladislav Prikhodko, a <span class="myAge">16</span>-y.o. frontend developer from Russia</span>
 	<!--my photo-->
 		<div class="wowItsMyPhoto">
 			<div class="part1"></div>
@@ -31,7 +31,7 @@
 		</div>
 	<!--canvas drawing-->
 		<canvas class="fieldForDrawing"></canvas>
-	</div>	
+	</div>
 	<!--sliders about skills-->
 	<h1 class="mySkills">My skills</h1>
 
@@ -87,11 +87,11 @@
 	<!--full description-->
 	<h2 class="fullDescription">I'm studying independently, I have been making websites since 2019, I have mastered 75% HTML, 90% CSS, 55% JAVASCRIPT, 30% WORDPRESS and 65% CANVAS, which allows you to draw on the field.<br>
 	I completed my first order on freelance and bragged to my parents. <br>
-	In 2021, I'm going to college to study as a programmer.</h2>
+	In 2021, I entered college to continue my studies as a programmer.</h2>
 
 	<!-- Aristotle's model -->
-	<canvas class="aristotle"></canvas>
-	
+	<canvas class="zeus"></canvas>
+
 	<!--footer-->
 	<div class="footer">
 		<span class="responsibility">I'm not responsible for the results of your dreams or propaganda drawings depicted in the sandbox</span>
@@ -107,8 +107,8 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.0/ScrollTrigger.min.js"></script>
 
 	<!-- three.js for model -->
-	<script src="model/three.min.js"></script>
-	<script src="https://cdn.rawgit.com/mrdoob/three.js/master/examples/js/loaders/GLTFLoader.js"></script> 
+	<script src="https://cdn.rawgit.com/mrdoob/three.js/dev/build/three.min.js"></script>
+	<script src="https://cdn.rawgit.com/mrdoob/three.js/master/examples/js/loaders/GLTFLoader.js"></script>
 
 	<script src="script.js"></script>
 	<script src="media.js"></script>
