--- a/index.html
+++ b/index.html
@@ -19,11 +19,20 @@
 
 		<h1 class="language">EN</h1>
 	</header>
+
+	<!--adaptation menu-->
+	<div class="menuAdap">
+		<div class="strip"></div>
+		<div class="strip"></div>
+		<div class="strip"></div>
+	</div>
+
+	<div class="cross">✖</div>
 	<!--screen saver with my name -->
 	<canvas class="circlesAndName"></canvas>
 	<!--description of me-->
 	<div class="aboutMe">
-		<span class="descriptionOfMe">I'm Vladislav Prikhodko, a <span class="myAge">16</span>-y.o. frontend developer from Russia</span>
+		<span class="descriptionOfMe">I'm Vladislav Prikhodko, a <span class="myAge">15</span>-y.o. frontend developer from Russia</span>
 	<!--my photo-->
 		<div class="wowItsMyPhoto">
 			<div class="part1"></div>
@@ -94,7 +103,7 @@
 
 	<!--footer-->
 	<div class="footer">
-		<span class="responsibility">I'm not responsible for the results of your dreams or propaganda drawings depicted in the sandbox</span>
+		<span class="responsibility">My aspiration - Eydos according to Plato</span>
 		<span class="year">2021</span>
 	</div>
 	<!--button for moving to up -->
