--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 	<img src="pic/josuke.webp" alt="josuke with a laptop"
 	onclick="window.open('https://www.google.ru/search?q=josuke+higashikata&newwindow=1&sxsrf=ALeKk00Iak_ltGZ-S89y6N9pLRmggdj4hg%3A1625525834149&source=hp&ei=So7jYKvKBviB9u8PmtKDmAE&iflsig=AINFCbYAAAAAYOOcWsvZjAI5L4cGirqNeVW4nku7WDhe&oq=josuke+&gs_lcp=Cgdnd3Mtd2l6EAEYADICCAAyAggAMgIILjICCAAyAggAMgIIADICCAAyAggAMgIIADICCAA6CAgAELEDEIMBOgUILhCxAzoFCAAQsQM6CAguELEDEJMCOhEILhCxAxCDARDHARCvARCTAjoLCC4QsQMQxwEQowJQxQdY8zxgjVFoAXAAeACAAbQFiAGhF5IBCzAuMS4zLjEuMS4ymAEAoAEBqgEHZ3dzLXdpeg&sclient=gws-wiz', '_blank');" class="josukeWithLap">
 	<!--full description-->
-	<h2 class="fullDescription">I'm studying independently, I have been making websites since 2019, I have mastered 75% HTML, 90% CSS, 55% JAVASCRIPT, 30% WORDPRESS and 65% CANVAS.<br>
+	<h2 class="fullDescription">I'm studying independently, I have been making websites since 2019.<br>
 	I completed my first order on freelance and bragged to my parents. <br>
 	In 2021, I entered college to continue my studies as a programmer.</h2>
 
