--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Canvas Portfolio</title>
+	<title>Vladislav Prikhodko</title>
 	<link rel="stylesheet" href="style.css">
 	<link rel="stylesheet" href="media.css">
 	<link rel="stylesheet icon" href="https://sun9-50.userapi.com/impg/krxX1zOq8Z1soTGBDkwPteywAz64mwlq6BLUJQ/FXnaIyxZDcM.jpg?size=1004x847&quality=96&sign=fd6ecd12daf448b5700c92f075b93704&type=album">
