--- a/page_my_works/index.html
+++ b/page_my_works/index.html
@@ -27,7 +27,7 @@
 		<div class="strip"></div>
 	</div>
 
-	<div class="cross">✖</div> 
+	<div class="cross">✖</div>
 
 	<!--pic with parallax from anime "Your Name"-->
 	<div class="yourName"></div>
@@ -35,9 +35,9 @@
 	<h1 class="headingText"><span class="findWorks">You can find all my works on my</span> <span class="gh" onclick="window.open('https://github.com/Izura1419','_blank')">github</span></h1>
 	<!--images under div yourName-->
 	<div class="underDiv">
-		<img src="img/vapor.png" alt="" class="vapor" onclick="window.open('https://izura1419.github.io/my-vaporwave/','_blank')">
-		<img src="img/pic.png" alt="" class="pic" onclick="window.open('https://izura1419.github.io/Pic/','_blank')">
-		<img src="img/mathilda.png" alt="" class="mathilda" onclick="window.open('https://izura1419.github.io/flight-of-design-thought/','_blank')">
+		<img src="img/vapor.jpg" alt="" class="vapor" onclick="window.open('https://izura1419.github.io/my-vaporwave/','_blank')">
+		<img src="img/pic.jpg" alt="" class="pic" onclick="window.open('https://izura1419.github.io/Pic/','_blank')">
+		<img src="img/mathilda.jpg" alt="" class="mathilda" onclick="window.open('https://izura1419.github.io/flight-of-design-thought/','_blank')">
 	</div>
 	<!--nice gif-->
 	<img src="img/niceJF.gif" alt="" class="underDivMan">
@@ -47,31 +47,31 @@
 	<section>
 		<h1 class="title firstTitle" onclick="window.open('https://izura1419.github.io/my-vaporwave/','_blank')">Vaporwave</h1>
 		<h3 class="description">While studying the Javascript library Three.js, I was listening to the song リフフランンク420 /ののコンピュー MACINTOSH PLUS and was inspired by the culture of V a p o r w a v e. Here's what came out of it.</h3>
-		<img src="img/vapor.png" alt="" class="illustration">
+		<img src="img/vapor.jpg" alt="" class="illustration">
 	</section>
 
 	<section>
 		<h1 class="title" onclick="window.open('https://izura1419.github.io/Pic/','_blank')">Jigsaw</h1>
 		<h3 class="description">When I was studying canvas, I thought : "Why not make a website that collects the photo itself in pieces?". Said and done.</h3>
-		<img src="img/pic.png" alt="" class="illustration">
+		<img src="img/pic.jpg" alt="" class="illustration">
 	</section>
 
 	<section>
 		<h1 class="title" onclick="window.open('https://izura1419.github.io/flight-of-design-thought/','_blank')">Mathilda Lando</h1>
 		<h3 class="description">After watching the movie Leon: The Professional(1994), I was inspired and created an unusual website based on design.</h3>
-		<img src="img/mathilda.png" alt="" class="illustration">
+		<img src="img/mathilda.jpg" alt="" class="illustration">
 	</section>
 
 	<section>
 		<h1 class="title" onclick="window.open('https://izura1419.github.io/unpredictable-website/','_blank')">Random World</h1>
 		<h3 class="description">Nothing can be predicted on this site. A random number or letter of a random color and size appears in a random place at a random time.</h3>
-		<img src="img/random.png" alt="" class="illustration">
+		<img src="img/random.jpg" alt="" class="illustration">
 	</section>
 
 	<section>
 		<h1 class="title" onclick="window.open('https://izura1419.github.io/FiremanGame/','_blank')">Game about Fireman</h1>
 		<h3 class="description">My first full-fledged web game in which you are a firefighter and have to save a burning village. Click on the house, then, if you see a fire, click on the space bar. And don't you dare knock down the apples.</h3>
-		<img src="img/fireman.png" alt="" class="illustration">
+		<img src="img/fireman.jpg" alt="" class="illustration">
 	</section>
 
 	<!--button for moving to up -->
